# mdmsim

./: .gitignore  README.md
MDMTrace/: CMakeLists.txt  compile  config-Tiara.json  config-mdmExample.json  config.json  plotRays.py
MDMTrace/include/: MDMTrace.h  Rayin.h  elements.h  progress_bar.h
MDMTrace/src/: MDMTrace.cpp  Rayin.cpp  mdmExample.cpp  mdmExample1.cpp  mdmNptool.cpp  mdmTraceApp.cpp  mdmTraceTiara.cpp  mdmTrace_nptool.cpp
ref/: CMakeLists.txt  GNUmakefile.txt  exampleMDM.cc  main.py  rayTraceRef.cpp  run_oxf.mac
ref/cmake/Modules/: Findgsl.cmake
ref/config/: config_isobutane_22Ne_6Li_geant.json
ref/include/: MDMActionInitialization.hh  MDMAnalysis.hh  MDMCsIHit.hh  MDMCsISD.hh  MDMDetectorConstruction.hh  MDMEventAction.hh  MDMHit.hh  MDMInelasticPhysics.hh  MDMInelasticProcess.hh  MDMPrimaryGeneratorAction.hh  MDMRunAction.hh  MDMSD.hh  MDMSteppingAction.hh  MDMTrackerHit.hh  MDMTrackerSD.hh  MDMTrackingAction.hh  MDMTrackingInformation.hh  MDMWireHit.hh  MDMWireSD.hh  OxfordInputs.hh
ref/parallel/: main_stage1.py  main_stage2.py  submit_stage1  submit_stage2
ref/src/: .nfs000000000006251c00000770  MDMActionInitialization.cc  MDMAnalysis.cc  MDMCsIHit.cc  MDMCsISD.cc  MDMDetectorConstruction.cc  MDMEventAction.cc  MDMHit.cc  MDMInelasticPhysics.cc  MDMInelasticProcess.cc  MDMPrimaryGeneratorAction.cc  MDMRunAction.cc  MDMSD.cc  MDMSteppingAction.cc  MDMTrackerHit.cc  MDMTrackerSD.cc  MDMTrackingAction.cc  MDMTrackingInformation.cc  MDMWireHit.cc  MDMWireSD.cc  OxfordInputs.cc
